Implement functionality to suggest outfits based on the current temperature